--- a/Portfolio/tsconfig.json
+++ b/Portfolio/tsconfig.json
@@ -31,12 +31,18 @@
       "@/styles/*": [
         "./src/styles/*"
       ]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
