--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
-    "framer-motion": "^12.23.26",
     "gray-matter": "^4.0.3",
+    "lenis": "^1.3.17",
     "mongoose": "^9.1.1",
     "next": "^16.1.1",
     "next-auth": "^4.24.13",
@@ -22,7 +22,6 @@
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "simple-icons": "^16.3.0",
