--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
+    "devicon": "^2.17.0",
     "gray-matter": "^4.0.3",
     "lenis": "^1.3.17",
     "mongoose": "^9.1.1",
